# RTSoft-TestTask

./: CMakeLists.txt  README.md  input.txt
include/: matrix_io.h  solver.h
src/: main.cpp  matrix_io.cpp  solver.cpp
